[package]
name = "xgboost-sys"
version = "0.2.0"
authors = ["Dave Challis <dave@suicas.net>"]
links = "xgboost"
build = "build.rs"
license = "MIT"
repository = "https://github.com/davechallis/rust-xgboost"
description = "Native bindings to the xgboost library"
readme = "README.md"
edition = "2021"
exclude = [
    "lib/*",
]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = { version = "0.71" }
dunce =  { version = "1.0.5" }
reqwest = { version = "0.12.15", features = ["blocking"], optional = true }
cmake = { version = "0.1", optional = true } 

[features]
default = ["use_prebuilt_xgb"]
use_prebuilt_xgb = ["reqwest"]
local_build = ["cmake"]
cuda = []
